--- a/frontend/src/components/Header/header.scss
+++ b/frontend/src/components/Header/header.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 40px;
   .content {
     display: flex;
     align-items: center;
